Removes Vercel analytics integration
Removes the Vercel analytics integration from the project. The explicit injection and script inclusion are no longer necessary, potentially due to changes in how the analytics are handled or a decision to discontinue its use.

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,21 @@
     <meta charset="utf-8" />
     <title>Checklist/Quiz</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <script defer src="/_vercel/insights/script.js"></script>
   <body class="mat-typography mat-app-background overflow-x-hidden">
     <app-root></app-root>
   </body>
